--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pydantic = {extras = ["dotenv"], version = "^1.9.2"}
+SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
 
 [tool.poetry.dev-dependencies]
 
